--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,6 @@
 @import compass
 @import compass/reset
+@import typo
 
 *, *:after, *:before
 	+box-sizing(border-box)
@@ -13,6 +14,7 @@ body
 		div#menu
 			padding: 0
 			margin: 0
+			margin-bottom: 20px
 			ul.menu
 				padding: 0
 				margin: 0 auto
@@ -22,9 +24,9 @@ body
 					position: relative
 					a
 						line-height: 40px
-						padding: 0 10px
+						padding: 0 6px
 						display: block
-						font-size: 12px
+						font-size: 11px
 						color: #fff
 						text-decoration: none
 					a:hover
@@ -49,3 +51,6 @@ body
 	div.content
 		width: 960px
 		margin: 0 auto
+	p.construct
+		text-align: center
+		color: #f00
