--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,28 +5,31 @@
 *, *:after, *:before
 	+box-sizing(border-box)
 body
-	background: #fafafa
+	background: #f0f0f0
 	padding: 0
 	margin: 0
 	font-family: sans-serif
 	header.top
 		background: #333
+		border-bottom: 1px solid #fff
+		+box-shadow(0 0 10px rgba(0,0,0,0.15))
+		margin-bottom: 20px
 		div#menu
 			padding: 0
 			margin: 0
-			margin-bottom: 20px
 			ul.menu
 				padding: 0
 				margin: 0 auto
 				width: 960px
+				text-align: center
 				li
 					display: inline-block
 					position: relative
 					a
 						line-height: 40px
-						padding: 0 6px
+						padding: 0 5px
 						display: block
-						font-size: 11px
+						font-size: 12px
 						color: #fff
 						text-decoration: none
 					a:hover
@@ -36,7 +39,7 @@ body
 						position: absolute
 						top: 40px
 						width: 180px
-						background: #eee
+						background: #fff
 						padding: 0
 						margin: 0
 						li
@@ -51,6 +54,8 @@ body
 	div.content
 		width: 960px
 		margin: 0 auto
+		img
+			+border-radius(4px)
 	p.construct
 		text-align: center
 		color: #f00
